ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-1-ingress
  namespace: my-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-app-1.local
      http:
        paths:
          - path: /my-app-1
            pathType: Prefix
            backend:
              service:
                name: my-app-1
                port:
                  number: 3333
