ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-2-ingress
  namespace: my-apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-app-2.local
      http:
        paths:
          - path: /my-app-2
            pathType: Prefix
            backend:
              service:
                name: my-app-2
                port:
                  number: 3333
